--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,11 @@ android {
 
 dependencies {
 
-    //implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     implementation ("com.google.dagger:hilt-android:2.38.1")
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
 //  Extra hilt considerations
 //    // Hilt
