--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
 }
 
 dependencies {
 
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    implementation ("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 
 //  Extra hilt considerations
 //    // Hilt
@@ -65,13 +63,21 @@ dependencies {
 //    implementation "com.squareup.okhttp3:okhttp:4.9.3"
 //    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+
+    implementation "com.google.dagger:hilt-android:2.40.5"
+    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
+
+    kapt "androidx.hilt:hilt-compiler:1.0.0"
+
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 }
 
 // Allow references to generated code
