--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     dependencies {
-        classpath("com.google.dagger:hilt-android-gradle-plugin:2.38.1")
+        classpath"com.google.dagger:hilt-android-gradle-plugin:2.40.5"
     }
 }
 
@@ -10,7 +10,9 @@ plugins {
     id 'com.android.library' version '7.1.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
-
+//1.5.31'
+//
+//'1.6.21
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
