--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,8 @@ jobs:
           
           
           - name: Build Android App
-  run: sparkfabrik/android-build-action@v1.2.0
+       run: sparkfabrik/android-build-action@v1.2.0
+       with:
+        project-path: android
+        output-path: my-app.apk
 
