--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,24 +34,20 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
+//
+//    packagingOptions {
+//        // Multiple dependency bring these files in. Exclude them to enable
+//        // our test APK to build (has no effect on our AARs)
+//        excludes += "/META-INF/AL2.0"
+//        excludes += "/META-INF/LGPL2.1"
+//    }
 }
 
 dependencies {
 
 
-
-//  Extra hilt considerations
-//    // Hilt
-//    implementation(Dependencies.Hilt.CORE)
-//    implementation(Dependencies.Hilt.ANDROID)
-//    implementation(Dependencies.Hilt.VIEWMODEL)
-//    kapt(Dependencies.Hilt.COMPILER)
-//    kapt(Dependencies.Hilt.ANDROID_X_COMPILER)
-
     // Moshi
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-// Moshi
     implementation "com.squareup.moshi:moshi-kotlin:1.9.3"
 
     // Retrofit
@@ -72,10 +68,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-    implementation "com.google.dagger:hilt-android:2.40.5"
-    kapt "com.google.dagger:hilt-android-compiler:2.40.5"
+    implementation "com.google.dagger:hilt-android:2.42"
+    kapt  "com.google.dagger:hilt-android-compiler:2.42"
 
-    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    //Hilt view model
+//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
+//    kapt "androidx.hilt:hilt-compiler:1.0.0"
+    //=============================================
+
 
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 }
