--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,13 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.42"
     kapt  "com.google.dagger:hilt-android-compiler:2.42"
 
-    //Hilt view model
-//    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-//    kapt "androidx.hilt:hilt-compiler:1.0.0"
-    //=============================================
+    // Activity KTX for viewModels()
+    implementation "androidx.activity:activity-ktx:1.4.0"
 
 
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+//
+//    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
 }
 
 // Allow references to generated code
